fixed centering and alignment finally

--- a/resources/css/bbqScoutingPASS_RGBColorTheme.css
+++ b/resources/css/bbqScoutingPASS_RGBColorTheme.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 #prematch_table, #postmatch_table, #auton_table, #endgame_table, #teleop_table, #testcycle_table {
-    text-align: center;
+    /* text-align: center; */
     font-size: 13px;
     letter-spacing: 1px;
     border-width: 4px;
@@ -23,7 +23,7 @@ html, body {
     text-align: right;
 }
 .field {
-    text-align: left;
+    /* text-align: left; */
 }
 .field-image {
     margin: 2vw;
@@ -105,24 +105,27 @@ h2{
     padding: 10px;
 }
 
-table {
-    display: flex;
-    border: 1px solid;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
+table{
+    width: 50%;
     margin: auto;
+    /* align-content: center; */
+    table-layout: fixed;
+    
+    /* text-align: center; */
 }
 
 td {
-    padding: 10px 4px;
+    width: 50px;
 }
 
-tbody {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
+tr {
+    width: 100px !important;
+    /* text-align: left;  */
+    /* vertical-align: middle; */
+    /* border: 2px solid red; */
+    padding: 10px;
 }
+
 
 input {
     font-size: 16px;
